--- a/PDC Project 1/nbproject/project.properties
+++ b/PDC Project 1/nbproject/project.properties
@@ -73,7 +73,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=PDC_Project_2
-main.class=pdc.project.pkg1.BattleShips
+main.class=Project2.pkg.BattleShips
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
